--- a/charts/rabbitmq/values.yaml
+++ b/charts/rabbitmq/values.yaml
@@ -22,8 +22,25 @@ ingresses:
 
 rabbitmq-cluster-operator:
   enabled: false
+  global:
+    security:
+      allowInsecureImages: true
+  rabbitmqImage:
+    registry: docker.io
+    repository: rabbitmq
+    tag: 4.1.3
+  credentialUpdaterImage:
+    registry: docker.io
+    repository: rabbitmqoperator/default-user-credential-updater
+    tag: 1.0.8
   useCertManager: true
   clusterOperator:
+    command:
+      - /manager
+    image:
+      registry: docker.io
+      repository: rabbitmqoperator/cluster-operator
+      tag: 2.16.1
     resources:
       limits:
         cpu: 100m
@@ -32,6 +49,12 @@ rabbitmq-cluster-operator:
         cpu: 10m
         memory: 25Mi
   msgTopologyOperator:
+    command:
+      - /manager
+    image:
+      registry: docker.io
+      repository: rabbitmqoperator/messaging-topology-operator
+      tag: 1.17.4
     resources:
       limits:
         cpu: 100m
@@ -52,6 +75,7 @@ rabbitmq-main:
 #  annotations:
 #    rabbitmq.com/topology-allowed-namespaces: "namespace1,namespace2"
 #  replicas: 3
+#  image: docker.io/rabbitmq:4.2.0
 #  override:
 #    statefulSet:
 #      spec:
