chart_deps/fluent/fluentbit: filtes, inputs, parsers, outputs

--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -50,6 +50,8 @@ crds:
 #      enabled: true
 #    rabbitmq-messaging-topology:
 #      enabled: true
+#    fluent-operator:
+#      enabled: true
 
   labels: {}
   finalizers: {}
