chart_deps/fluent/fluentbit/fluentbit-operated + use fluentbit-operated chart in main fluent chart

--- a/charts/chart_deps/fluent/fluentbit/filters/templates/clusterfilters.yaml
+++ b/charts/chart_deps/fluent/fluentbit/filters/templates/clusterfilters.yaml
@@ -3,7 +3,7 @@
 apiVersion: fluentbit.fluent.io/v1alpha2
 kind: ClusterFilter
 metadata:
-  name: {{ $cl_filter_name }}
+  name: {{ printf "%s-%s" (include "fluentbit-filters.fullname" $) $cl_filter_name }}
   labels:
 {{- include "fluentbit-filters.labels" $ | nindent 4 }}
 {{- with $cl_filter_obj.labels }}
