--- a/charts/chart_deps/fluent/fluentbit/outputs/templates/clusteroutputs.yaml
+++ b/charts/chart_deps/fluent/fluentbit/outputs/templates/clusteroutputs.yaml
@@ -3,7 +3,7 @@
 apiVersion: fluentbit.fluent.io/v1alpha2
 kind: ClusterOutput
 metadata:
-  name: {{ $cl_output_name }}
+  name: {{ printf "%s-%s" (include "fluentbit-outputs.fullname" $) $cl_output_name }}
   labels:
 {{- include "fluentbit-outputs.labels" $ | nindent 4 }}
 {{- with $cl_output_obj.labels }}
