--- a/charts/cert-manager/values.yaml
+++ b/charts/cert-manager/values.yaml
@@ -3,6 +3,8 @@ certificates:
 
 cert-manager:
   enabled: false
+  extraArgs:
+    - '--logging-format=json'
   resources:
     requests:
       cpu: 10m
@@ -12,6 +14,8 @@ cert-manager:
       memory: 100Mi
   cainjector:
     enabled: true
+    extraArgs:
+      - '--logging-format=json'
     resources:
       requests:
         cpu: 10m
@@ -20,6 +24,8 @@ cert-manager:
         cpu: 200m
         memory: 100Mi
   webhook:
+    extraArgs:
+      - '--logging-format=json'
     resources:
       requests:
         cpu: 10m
