--- a/charts/environment/values.yaml
+++ b/charts/environment/values.yaml
@@ -142,6 +142,10 @@ chart_apps:
     enabled: false
     values: |
       global: {{ .Values.global | toYaml | nindent 4 }}
+  fluent:
+    enabled: false
+    values: |
+      global: {{ .Values.global | toYaml | nindent 4 }}
   thanos:
     enabled: false
     values: |
