switch redis-exporter logs to json

--- a/charts/chart_deps/redis/redis-operated/values.yaml
+++ b/charts/chart_deps/redis/redis-operated/values.yaml
@@ -1,9 +1,13 @@
 sentinel:
   exporter:
     enabled: false
+    args:
+      - '--log-format=json'
 redis:
   exporter:
     enabled: false
+    args:
+      - '--log-format=json'
 auth: {}
 bootstrapNode: {}
 labelWhitelist: {}
