charts/chart_deps/fluent/fluentbit: yaml config format

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/values.yaml
@@ -9,11 +9,11 @@ filters:
 
 clusterConfig:
   enabled: false
-  configFileFormat: "classic"
+  configFileFormat: "yaml"
 
 config:
   enabled: false
-  configFileFormat: "classic"
+  configFileFormat: "yaml"
 
 parsers:
   enabled: false
