--- a/charts/chart_deps/fluent/fluentbit/filters/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/filters/values.yaml
@@ -3,21 +3,25 @@ filters:
 #    match: kube.*
 #    namespace: test
 #    filters:
-#      - kubernetes:
+#      mainKube:
+#        kubernetes:
 #          kubeURL: https://kubernetes.default.svc:443
 #          kubeCAFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
 #          kubeTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-#      - nest:
+#      nestKube:
+#        nest:
 #          operation: lift
 #          nestedUnder: kubernetes
 #          addPrefix: kubernetes_
-#      - modify:
+#      mainModify:
+#        modify:
 #          rules:
 #          - remove: stream
 #          - remove: kubernetes_pod_id
 #          - remove: kubernetes_host
 #          - remove: kubernetes_container_hash
-#      - nest:
+#      nestAll:
+#        nest:
 #          operation: nest
 #          wildcard:
 #          - kubernetes_*
@@ -27,25 +31,29 @@ filters:
 clusterFilters:
 #  test:
 #    match: kube.*
+#    namespace: test
 #    filters:
-#      - kubernetes:
+#      mainKube:
+#        kubernetes:
 #          kubeURL: https://kubernetes.default.svc:443
 #          kubeCAFile: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
 #          kubeTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-#      - nest:
+#      nestKube:
+#        nest:
 #          operation: lift
 #          nestedUnder: kubernetes
 #          addPrefix: kubernetes_
-#      - modify:
+#      mainModify:
+#        modify:
 #          rules:
 #          - remove: stream
 #          - remove: kubernetes_pod_id
 #          - remove: kubernetes_host
 #          - remove: kubernetes_container_hash
-#      - nest:
-#          operation: nest
-#          wildcard:
-#          - kubernetes_*
-#          nestUnder: kubernetes
-#          removePrefix: kubernetes_
-#
+#      nestAll:
+#        nest:
+#        operation: nest
+#        wildcard:
+#        - kubernetes_*
+#        nestUnder: kubernetes
+#        removePrefix: kubernetes_
