add ability to set rabbitmq:..

--- a/charts/chart_deps/rabbitmq/rabbitmq-cluster/templates/clusters.yaml
+++ b/charts/chart_deps/rabbitmq/rabbitmq-cluster/templates/clusters.yaml
@@ -39,3 +39,7 @@ spec:
   override:
   {{- tpl (toYaml .) $ | nindent 4 }}
   {{- end }}
+  {{- with .Values.rabbitmq }}
+  rabbitmq:
+  {{- tpl (toYaml .) $ | nindent 4 }}
+  {{- end }}
