switch rmq logs to json

--- a/charts/chart_deps/rabbitmq/rabbitmq-cluster/values.yaml
+++ b/charts/chart_deps/rabbitmq/rabbitmq-cluster/values.yaml
@@ -4,7 +4,9 @@ nameOverride: ""
 prometheusSelector: {}
 annotations: {}
 replicas: 1
-rabbitmq: {}
+rabbitmq:
+  additionalConfig: |
+    log.console.formatter = json
 persistence: {}
 tolerations: {}
 affinity: {}
