Feature json logs (#73)
* switch pg-exporter logs to json

* switch pg-operator logs to json

* switch prometheus and operator/node-exp./stackdriver-exp./alermanager/blackbox-exp. logs to json

* switch cert-manager logs to json

* switch external-dns logs to json

* switch gha-operator logs to json

* switch grafana+operator logs to json

* switch thanos compactor+query+storegateway logs to json

* switch argocd logs to json

* switch redis-exporter logs to json

* add ability to set rabbitmq:..

* switch rmq logs to json

* switch konghq ingress-controller logs to json

* update pg-exporter chart

* update pg-exporter chart

* update info

* switch pg logs to json

--- a/charts/chart_deps/rabbitmq/rabbitmq-cluster/values.yaml
+++ b/charts/chart_deps/rabbitmq/rabbitmq-cluster/values.yaml
@@ -4,6 +4,9 @@ nameOverride: ""
 prometheusSelector: {}
 annotations: {}
 replicas: 1
+rabbitmq:
+  additionalConfig: |
+    log.console.formatter = json
 persistence: {}
 tolerations: {}
 affinity: {}
