--- a/charts/chart_deps/postgres/postgres-cluster/values.yaml
+++ b/charts/chart_deps/postgres/postgres-cluster/values.yaml
@@ -10,6 +10,7 @@ postgresql:
     #improving performance on ssd disks
     random_page_cost: '1.1'
     effective_io_concurrency: '200'
+    log_destination: "jsonlog"
 env: {}
 volume: {}
 podAnnotations: {}
@@ -24,7 +25,7 @@ connectionPooler: {}
 sidecars: {}
 defaultSidecars:
   enabled: false
-  pgExporterImage: "{{ $.Values.global.registry.url}}/postgres-exporter:v0.17.1-1"
+  pgExporterImage: "{{ $.Values.global.registry.url}}/postgres-exporter:v0.17.1-3"
 teamId: "main"
 nodeAffinity: {}
 podMonitor:
