--- a/charts/loki/values.yaml
+++ b/charts/loki/values.yaml
@@ -24,6 +24,8 @@ loki:
     auth_enabled: false
     limits_config:
       max_label_names_per_series: 20
+      discover_log_levels: false
+      log_level_fields: []
     analytics:
       reporting_enabled: false
     storage:
